2003-09-05  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    Patch from Jerzy Sobczyk about outgoing SMTP not
	    always honouring '-h' option set local hostname
	    in outbound EHLO/HELO greetings.

2003-09-03  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/contentpolicy.c:
	    Patch from Eugene Crosser to run be able to run
	    content-filter as an AF_UNIX socket server.

2003-09-02  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/appendlet.c:
	    Oops, readalready processing bug.

	* transports/sm/sm.c, transports/mailbox/mailbox.c:
	    Code rearrangements during verification job that
	    similar bugs don't exist as in appendlet..

2003-09-01  Matti Aarnio  <mea@zmailer.org>

	* scheduler/prototypes.h:
	    Change 'const char *log;' to 'const char *logfn;'

	* utils/perl/Makefile.in:
	    Deeper study of what to do in perl module compilation.
	    Now  "make install DESTDIR=.." parameter should have
	    real effect in the underlying  Makefile.PL  files.

	* transports/libta/ctlopen.c:
	    One test of  ta_use_mmap  was slightly wrong, and
	    end result was faulty  let_buffer()  initialization.

2003-08-29  Matti Aarnio  <mea@zmailer.org>

	* debian/*
	    Debian packet builder scripts from 
	    Xose Vazquez Perez <xose@wanadoo.es>

	* include/libz.h, lib/zgetbindaddr.c, scheduler/transport.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/cfgread.c, transports/smtp/smtp.c:
	    Added third parameter into  zgetbindaddr()  function,
	    namely: what address family should be used ?
	    Entry parameter is: AF_INET / AF_INET6 (0 == AF_INET)
	    That is needed for  "iface:..." binding mode.

	* utils/smtpserver-log-parser.pl.in:
	    Found a bug in the 'pid-parser', changed the RE patterns,
	    and system that formerly leaked a lot of memory does now
	    only a little bit..

	* man/scheduler.8.in:
	    Fixed a typo in  PARAMauthfile= document.

	* proto/smtpserver.conf.in: